Fixes broken logo on mobile screen

--- a/assets/scss/components/_logo.scss
+++ b/assets/scss/components/_logo.scss
@@ -2,6 +2,8 @@
 	color: $main-header-color;
 	text-align: center;
 
+	padding: 0;
+
 	margin-top: 55px;
 	margin-bottom: 10px;
 	line-height: 0.7em;
